# fit

./: .gitignore  DEV.md  LICENSE  README.md  fit.py  fitrepo.py  pyproject.toml  setup.py
src/fit/: __init__.py  fit.py
src/fitrepo/: fitrepo.py  fix_git_index.py  fixgitignore.py  git_fix.py
tests/: test_commands.py  test_error_handling.py  test_fit.py  test_fitrepo.py  test_git_isolation.py  test_repo_functions.py  test_utils.py
